--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <body>
     <div class="flexbox-container">
       <div>
-        <h3>Repositories</h3>
-      </div>
+  <h3>Commits</h3>
+  <div id="commits"></div>
+</div>
       <div>
         <h3>Commits</h3>
       </div>
